[gd_scene load_steps=8 format=3 uid="uid://dgegbmg7pvvob"]

[ext_resource type="Script" path="res://UserInterface.gd" id="1_1wsof"]
[ext_resource type="Texture2D" uid="uid://ddltq75v6jb3n" path="res://Assets/board-background.png" id="2_s1mm8"]
[ext_resource type="Script" path="res://Grid.gd" id="2_vfkys"]
[ext_resource type="Texture2D" uid="uid://ijs1mqg6b0m1" path="res://Assets/Background.png" id="3_6a2yr"]
[ext_resource type="Script" path="res://TouchControl.gd" id="4_j5d8y"]
[ext_resource type="Script" path="res://KeyboardControl.gd" id="5_srny1"]
[ext_resource type="Script" path="res://ControllerControl.gd" id="6_xelmb"]

[node name="Main" type="Node2D"]

[node name="UserInterface" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 1164.0
offset_bottom = 636.0
script = ExtResource("1_1wsof")

[node name="ScoreLabel" type="Label" parent="UserInterface"]
z_index = 1
layout_mode = 0
offset_left = 209.0
offset_top = 31.0
offset_right = 330.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 32
text = "Score: 0
"

[node name="HighScoreLabel" type="Label" parent="UserInterface"]
z_index = 1
layout_mode = 0
offset_left = 360.0
offset_top = 32.0
offset_right = 560.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 32
text = "High Score: 0
"

[node name="Sprite2D" type="Sprite2D" parent="UserInterface"]

[node name="Grid" type="Node2D" parent="UserInterface"]
script = ExtResource("2_vfkys")

[node name="GridBackground" type="Sprite2D" parent="UserInterface"]
z_index = 1
position = Vector2(280, 720)
texture = ExtResource("2_s1mm8")

[node name="TextureRect" type="TextureRect" parent="UserInterface"]
layout_mode = 0
offset_top = 2.0
offset_right = 576.0
offset_bottom = 1026.0
texture = ExtResource("3_6a2yr")

[node name="TouchControl" type="Node2D" parent="."]
script = ExtResource("4_j5d8y")

[node name="KeyboardControl" type="Node2D" parent="."]
script = ExtResource("5_srny1")

[node name="ControllerControl" type="Node2D" parent="."]
script = ExtResource("6_xelmb")

[connection signal="move" from="TouchControl" to="UserInterface/Grid" method="_on_touch_control_move"]
[connection signal="move" from="KeyboardControl" to="UserInterface" method="_on_keyboard_control_move"]
[connection signal="move" from="ControllerControl" to="UserInterface/Grid" method="_on_controller_control_move"]
